Update cnn with ablation study

--- a/src/colab_run.ipynb
+++ b/src/colab_run.ipynb
@@ -1,78 +1,181 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1d8f8e3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d1d8f8e3",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "d1d8f8e3"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install kaggle"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "48ab54b9",
+      "metadata": {
+        "id": "48ab54b9"
+      },
+      "source": [
+        "Upload kaggle token"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "b740f260",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "b740f260"
+      },
+      "outputs": [],
+      "source": [
+        "!mkdir -p ~/.kaggle\n",
+        "!mv kaggle.json ~/.kaggle/\n",
+        "!chmod 600 ~/.kaggle/kaggle.json"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "85c72248",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "85c72248"
+      },
+      "outputs": [],
+      "source": [
+        "!kaggle datasets download -d maysee/mushrooms-classification-common-genuss-images\n",
+        "!unzip mushrooms-classification-common-genuss-images.zip -d /content/data/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 /content/resnet_trainer.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OgDCRzUE2BvY",
+        "outputId": "25334acb-dafb-4d9b-d79b-2091e932211c"
+      },
+      "id": "OgDCRzUE2BvY",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping corrupted image: /content/data/Mushrooms/Russula/092_43B354vYxm8.jpg\n",
+            "Total images: 6713\n",
+            "Training images: 5370\n",
+            "Validation images: 1343\n",
+            "Classes: ['Agaricus', 'Amanita', 'Boletus', 'Cortinarius', 'Entoloma', 'Hygrocybe', 'Lactarius', 'Russula', 'Suillus']\n",
+            "Using device: cuda\n",
+            "/content/resnet_trainer.py:80: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+            "  self.scaler = torch.cuda.amp.GradScaler()\n",
+            "/content/resnet_trainer.py:93: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.cuda.amp.autocast():  # Mixed precision\n",
+            "/content/resnet_trainer.py:116: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.cuda.amp.autocast():  # Mixed precision\n",
+            "Epoch [1/20] Train Loss: 1.1743, Train Acc: 0.5927, Val Loss: 0.8097, Val Acc: 0.7118\n",
+            "Epoch [2/20] Train Loss: 0.7486, Train Acc: 0.7371, Val Loss: 0.7314, Val Acc: 0.7394\n",
+            "Epoch [3/20] Train Loss: 0.6117, Train Acc: 0.7903, Val Loss: 0.6515, Val Acc: 0.7707\n",
+            "Epoch [4/20] Train Loss: 0.5449, Train Acc: 0.8151, Val Loss: 0.7012, Val Acc: 0.7513\n",
+            "Epoch [5/20] Train Loss: 0.4949, Train Acc: 0.8277, Val Loss: 0.5459, Val Acc: 0.8064\n",
+            "Epoch [6/20] Train Loss: 0.4015, Train Acc: 0.8631, Val Loss: 0.4889, Val Acc: 0.8265\n",
+            "Epoch [7/20] Train Loss: 0.3591, Train Acc: 0.8784, Val Loss: 0.4847, Val Acc: 0.8362\n",
+            "Epoch [8/20] Train Loss: 0.3320, Train Acc: 0.8888, Val Loss: 0.4578, Val Acc: 0.8466\n",
+            "Epoch [9/20] Train Loss: 0.3366, Train Acc: 0.8827, Val Loss: 0.4481, Val Acc: 0.8369\n",
+            "Epoch [10/20] Train Loss: 0.3150, Train Acc: 0.8935, Val Loss: 0.4742, Val Acc: 0.8332\n",
+            "Epoch [11/20] Train Loss: 0.2745, Train Acc: 0.9091, Val Loss: 0.4127, Val Acc: 0.8541\n",
+            "Epoch [12/20] Train Loss: 0.2510, Train Acc: 0.9229, Val Loss: 0.3990, Val Acc: 0.8593\n",
+            "Epoch [13/20] Train Loss: 0.2561, Train Acc: 0.9132, Val Loss: 0.4172, Val Acc: 0.8608\n",
+            "Epoch [14/20] Train Loss: 0.2566, Train Acc: 0.9121, Val Loss: 0.4045, Val Acc: 0.8660\n",
+            "Epoch [15/20] Train Loss: 0.2382, Train Acc: 0.9214, Val Loss: 0.4296, Val Acc: 0.8518\n",
+            "Epoch [16/20] Train Loss: 0.2189, Train Acc: 0.9272, Val Loss: 0.3833, Val Acc: 0.8771\n",
+            "Epoch [17/20] Train Loss: 0.2181, Train Acc: 0.9279, Val Loss: 0.4093, Val Acc: 0.8578\n",
+            "Epoch [18/20] Train Loss: 0.2168, Train Acc: 0.9268, Val Loss: 0.4017, Val Acc: 0.8675\n",
+            "Epoch [19/20] Train Loss: 0.2208, Train Acc: 0.9289, Val Loss: 0.4345, Val Acc: 0.8548\n",
+            "Epoch [20/20] Train Loss: 0.2003, Train Acc: 0.9335, Val Loss: 0.3838, Val Acc: 0.8645\n",
+            "Model saved to resnet18_mushrooms_finetuned.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 nn_ablation_study.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MXX8KSlsOemW",
+        "outputId": "aa58d85c-c205-49c0-c509-667e035c96d0"
+      },
+      "id": "MXX8KSlsOemW",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Running Experiment: Baseline (Aug + Dropout + AdamW)\n",
+            "Skipping corrupted image: /content/data/Mushrooms/Russula/092_43B354vYxm8.jpg\n",
+            "/content/nn_ablation_study.py:62: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+            "  self.scaler = torch.cuda.amp.GradScaler()\n",
+            "/content/nn_ablation_study.py:71: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.cuda.amp.autocast():\n",
+            "/content/nn_ablation_study.py:89: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+            "  with torch.cuda.amp.autocast():\n",
+            "Validation Accuracy for Baseline (Aug + Dropout + AdamW): 0.8042\n",
+            "\n",
+            "Running Experiment: No Augmentation\n",
+            "Skipping corrupted image: /content/data/Mushrooms/Russula/092_43B354vYxm8.jpg\n",
+            "Validation Accuracy for No Augmentation: 0.8153\n",
+            "\n",
+            "Running Experiment: No Dropout\n",
+            "Skipping corrupted image: /content/data/Mushrooms/Russula/092_43B354vYxm8.jpg\n",
+            "Validation Accuracy for No Dropout: 0.8176\n",
+            "\n",
+            "Running Experiment: SGD Optimizer\n",
+            "Skipping corrupted image: /content/data/Mushrooms/Russula/092_43B354vYxm8.jpg\n",
+            "Validation Accuracy for SGD Optimizer: 0.4296\n",
+            "\n",
+            "Ablation summary saved to ablation_summary.txt\n"
+          ]
+        }
+      ]
     }
-   },
-   "outputs": [],
-   "source": [
-    "!pip install kaggle"
-   ]
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "markdown",
-   "id": "48ab54b9",
-   "metadata": {},
-   "source": [
-    "Upload kaggle token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b740f260",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!mkdir -p ~/.kaggle\n",
-    "!mv kaggle.json ~/.kaggle/\n",
-    "!chmod 600 ~/.kaggle/kaggle.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85c72248",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!kaggle datasets download -d maysee/mushrooms-classification-common-genuss-images\n",
-    "!unzip mushrooms-classification-common-genuss-images.zip -d /content/data/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ad169b2",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!python3 /content/src/train.py"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
